fixes search icon wrapping in mobile nav

--- a/app/components/OECNavbar.css
+++ b/app/components/OECNavbar.css
@@ -126,7 +126,7 @@
 .navbar-search-toggle-button-wrapper {
   flex: 1 1 0;
   text-align: right;
-  min-width: 200px;
+  min-width: 220px;
 }
 .navbar-search-toggle-button-wrapper,
 .call-to-action.section {
